# pets_accounting

./: .env-example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requests.http  setup.cfg
.github/workflows/: main.yml
api/: models.py  routers.py  serializers.py  urls.py  views.py
api/management/commands/: pets_list.py
api/migrations/: 0001_initial.py  0002_rename_photos_petphoto_photo.py  0003_alter_petphoto_pet.py
config/: permissions.py  settings.py  urls.py
nginx/: default.conf
tests/: fixtures.py  test_api.py
