[tool.poetry]
name = "animal-accounting"
version = "0.1.0"
description = "REST API для ведения учета питомцев (собак и кошек)"
authors = ["V-Holodov <w.a.holodov@yandex.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0"
djangorestframework = "^3.12.4"
flake8-isort = "^4.1.1"
black = "^21.12b0"
Pillow = "^8.4.0"
pytz = "^2021.3"
python-environ = "^0.4.54"
pytest = "^6.2.5"
pytest-django = "^4.5.2"
psycopg2-binary = "^2.9.2"
gunicorn = "^20.1.0"
flake8 = "^4.0.1"
pep8-naming = "^0.12.1"
flake8-broken-line = "^0.4.0"
flake8-return = "^1.1.3"
django-rest-swagger = "^2.2.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
